# TallerCorte2

./: docker-compose.yml
cpp/: Dockerfile.cpp
cpp/Figuras/: Figuras.sln
cpp/Figuras/Figuras/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Cubo.cpp  Cubo.h  Esfera.cpp  Esfera.h  Figura.cpp  Figura.h  Figura2d.cpp  Figura2d.h  Figura3d.cpp  Figura3d.h  Figuras.vcxproj  Figuras.vcxproj.filters  Gestionar.cpp  Gestionar.h  Main.cpp  Main.h  test_figuras.cpp
diseño/: diagrama_clases.puml  secuencia_consultar_unidades.puml  secuencia_crear_figura.puml
java/: Dockerfile.java
java/Figuras/: Dockerfile.java  dependency-reduced-pom.xml  pom.xml
java/Figuras/src/main/java/org/example/: Circulo.java  Cuadrado.java  Cubo.java  Esfera.java  Figura.java  Figura2d.java  Figura3d.java  FiguraFactory.java  FormateadorSalida.java  GeneradorID.java  Gestionar.java  LectorEntrada.java  Main.java  PersistenciaArchivos.java  RepositorioFiguras.java  UnidadAdapter.java  UnidadMedida.java
java/Figuras/src/test/java/org/example/: CirculoTest.java  (+4 more)
python/: Dockerfile.python
python/Figuras/: Circulo.py  Cuadrado.py  Cubo.py  FiguraFactory.py  FormateadorSalida.py  GeneradorID.py  Gestionar.py  LectorEntrada.py  PersistenciaArchivos.py  RepositorioFiguras.py  UnidadAdapter.py  UnidadMedida.py  circulo.py  cuadrado.py  cubo.py  esfera.py  figura.py  figura2d.py  figura3d.py  figura_factory.py  figuras.json  generador_id.py  gestionar.py  io_figuras.py  main.py  repositorio_figuras.py  serializador_figuras.py  test_figura.py  test_figuras_bdd.py  unidad_adapter.py
python/Figuras/features/: environment.py  figuras.feature
python/Figuras/features/steps/: figuras_steps.py
